--- a/style.css
+++ b/style.css
@@ -244,9 +244,64 @@ select{
 
 #bckContact{
     height: 100%;
-background-color: gray;
-position: fixed;
-top: 0;
-width: 100%;
-left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0;
+}
+#headerText{
+    display: flex;
+    font-size: 50px;
+    text-align: left;
+    padding-left: 30px;
+}
+#SizeTextP{
+    margin: 0;
+}
+input{
+    width: 90%;
+    height: 52px;
+    border-radius: 5px;
+    border-style: none;
+    outline: none;
+    font-size: 16px;
+    padding-left: 15px;
+}
+#textFormula{
+    text-align: left;
+    padding-left: 25px;
+    font-size: 30px;
+    margin: 0;
+}
+textarea{
+    width: 577px;
+    height: 39px;
+    border-radius: 5px;
+    border-style: none;
+    outline: none;
+    font-size: 16px;
+}
+#formulaBtn{
+    color: #fff;
+    height: 55px;
+    width: 170px;
+    background-color: #911c1c;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    display: inherit;
+    text-align: center;
+    margin-left: 23px;
+    cursor: pointer;
+}
+.close-button{
+    color: #000;
+    font-size: 25px;
+    text-decoration: none;
+    text-align: right;
+    padding-left: 205px;
+}
+#EndFormula{
+    font-size: 28px;
 }
